--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0-beta1",
+    "dotenv": "^10.0.0",
     "firebase": "^9.8.4",
     "framer-motion": "^6.3.16",
+    "fs": "^0.0.1-security",
     "html5-file-selector": "^2.1.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
